@@ -2,6 +2,7 @@
 * revert the rtl_433 to rtl changes
 * update identifier for Ambient Weather F007TH
 * added support for fine offset rain gauge (rtl_433 calls it EcoWitt-WH40)
+* deal with more changes to acurite 5n1 packet format from rtl_433
 
 0.76 04feb2020
 * use rtl instead of rtl_433 to match rtl_433 project change
